--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 
-<body style="background-color: #b63f3f;">
+<body >
 
     <h1 class="heading">Tic Tac Toe</h1>
     <div class="game">
